# anomeda

./: .gitignore  README.md  Untitled.ipynb  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml  publish-to-test-pypi.yml
anomeda/: DataFrame.py  __init__.py  utils.py
docs/: anomeda_api.md  api_reference.md  dataframe_api.md  index.md  requirements.txt  usage_guide.md  user_guide.md
docs/api/dataframe/: aspandas.md
site/: 404.html  index.html  objects.inv  requirements.txt
site/anomeda_api/: index.html
site/api_reference/: index.html
site/dataframe_api/: index.html
site/search/: search_index.json
site/usage_guide/: index.html
site/user_guide/: index.html
src/: Untitled.ipynb
src/anomeda/: DataFrame.py  Untitled.ipynb  __init__.py  utils.py
src/anomeda.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/test/: __init__.py
tests/: test_main.py
