[project]
name = "anomeda"
version = "1.0.0"
authors = [
  { name="Anton Saroka", email="anton.soroka.1313@gmail.com" },
]
description = "A tiny library which helps to identify important metric changes and quickly find clusters in data which changed the trend of the metric or caused the anomaly"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/AntonSarr/anomeda"
Issues = "https://github.com/AntonSarr/anomeda/issues"